# ocrdemo

./: .gitignore  Dockerfile  README.md  README.rst  docker-compose.yml  main.py  pyproject.toml
ocrdemo/: constants.py  preprocessing.py  utils.py
tests/: test_ocrdemo.py
