[tool.poetry]
name = "ocrdemo"
version = "0.1.0"
description = ""
authors = ["Nguyen Anh Tuan <nguyentuan4989@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
yapf = "^0.30.0"
tesserocr = "^2.5.1"
click = "^7.1.2"
pdf2image = "^1.13.1"
opencv-python-headless = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
