[tool.poetry]
name = "ocrdemo"
version = "0.1.0"
description = ""
authors = ["Nguyen Anh Tuan <nguyentuan4989@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python-headless = "^4.3.0"
pdf2image = "^1.13.1"
click = "^7.1.2"
numpy = "^1.19.1"
isort = "^5.2.2"
yapf = "^0.30.0"
tesserocr = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"